[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Control/fireWeapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Scenes/LevelBaseTS.gd" type="Script" id=2]
[ext_resource path="res://assets/Textures/TexturesCom_Grass0130_1_seamless_S.jpg" type="Texture" id=3]
[ext_resource path="res://src/Control/MoveController.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Player/boy1.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Scenes/house/House.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Scenes/SunLight.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Control/WeaponSelector.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Control/PickButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Control/GiftList.tscn" type="PackedScene" id=10]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 373, 253 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 3 )
transmission_enabled = true
transmission = Color( 0, 0, 0, 1 )
uv1_scale = Vector3( 150, 150, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 373, 0.1, 253 )

[node name="Level Base" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -186.5, 0, -126.5 )
script = ExtResource( 2 )

[node name="Gifts" type="Spatial" parent="."]

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 186.5, 0, 126.5 )

[node name="Landscape" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38.8905, -2.38419e-07, 15.5255 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0 )
shape = SubResource( 3 )

[node name="Houses" type="Spatial" parent="."]

[node name="House" parent="Houses" instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 180.165, 0, 124.88 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.005
margin_right = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2D" type="Node2D" parent="UI"]
position = Vector2( -1, 2 )

[node name="MoveController" parent="UI" instance=ExtResource( 4 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -303.0
margin_right = 300.0
margin_bottom = -103.0
RUN_WAIT = 2.0

[node name="idle" type="Button" parent="UI"]
visible = false
margin_left = 32.0
margin_top = 45.0
margin_right = 51.0
margin_bottom = 65.0
text = "I"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="walk" type="Button" parent="UI"]
visible = false
margin_left = 55.1914
margin_top = 45.0
margin_right = 80.1914
margin_bottom = 65.0
text = "W"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="run" type="Button" parent="UI"]
visible = false
margin_left = 83.7646
margin_top = 45.0
margin_right = 108.765
margin_bottom = 65.0
text = "R"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fire" type="Button" parent="UI"]
visible = false
margin_left = 112.355
margin_top = 45.8409
margin_right = 137.355
margin_bottom = 65.8409
text = "F"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fireWeapon" parent="UI" instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -253.0
margin_right = -50.0
margin_bottom = -153.0

[node name="list" type="Button" parent="UI"]
visible = false
margin_left = 218.729
margin_top = 47.9431
margin_right = 253.729
margin_bottom = 67.9431
text = "List"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="OptionButton" parent="UI"]
visible = false
margin_left = 33.0
margin_top = 20.0
margin_right = 256.0
margin_bottom = 40.0
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="OptionButton" parent="UI"]
visible = false
margin_left = 34.6818
margin_top = 77.181
margin_right = 257.682
margin_bottom = 97.181
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeopanSelector" parent="UI" instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -151.267
margin_top = 44.2922
margin_right = -51.2672
margin_bottom = 144.293

[node name="PickButton" parent="UI" instance=ExtResource( 9 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -370.0
margin_right = -50.0
margin_bottom = -270.0

[node name="control" parent="UI" instance=ExtResource( 10 )]
margin_left = 201.989
margin_top = 232.193
margin_right = 201.989
margin_bottom = 232.193

[node name="player" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 184.046, -0.0143234, 119.676 )

[node name="SunLight" parent="." instance=ExtResource( 7 )]
[connection signal="pressed" from="UI/idle" to="." method="_on_idle_pressed"]
[connection signal="pressed" from="UI/walk" to="." method="_on_walk_pressed"]
[connection signal="pressed" from="UI/run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="UI/fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="UI/list" to="." method="_on_list_pressed"]
[connection signal="item_selected" from="UI/Weapon" to="." method="_on_Weapon_item_selected"]
[connection signal="gift_picked" from="UI/PickButton" to="." method="_on_gift_picked"]
